--- a/styles.css
+++ b/styles.css
@@ -246,3 +246,34 @@ button:hover {
     text-decoration: underline;
 }
 
+.editable-input {
+    width: 100%;
+    padding: 0.5vw;
+    margin: 1vw 0;
+    font-size: 1.5em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.edit-buttons {
+    margin-top: 1vw;
+}
+
+.edit-buttons button {
+    margin-right: 1vw;
+    padding: 0.5vw 1vw;
+    font-size: 1em;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.edit-buttons .submit-btn {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.edit-buttons .cancel-btn {
+    background-color: #f44336;
+    color: white;
+}
