--- a/styles.css
+++ b/styles.css
@@ -100,27 +100,12 @@ html, body {
     background-color: rgb(166, 164, 164);
 }
 
-.projectButton {
-    color: #ccc;
-    padding: 1vw 2vw;
-    margin: 1vw 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    border-radius: 0.4vw;
-    cursor: pointer;
-    position: relative;
-    font-family: calibri;
-    font-weight: 600;
-    font-size: 2vw;
-}
+
 
 .projectButton.selected {
     background-color: rgba(255, 255, 255, 0.5); 
     color: white;
 }
-
 
 /* Modal Styles */
 .modal {
@@ -200,20 +185,39 @@ button:hover {
 #projectList {
     list-style-type: none; 
     padding: 0; 
-    margin: 20px 0; 
+    margin: 0;
+ 
 }
 
 #projectList li {
-    background-color: rgb(77, 82, 82);
-    padding: 10px; 
-    margin-bottom: 10px; 
-    border-radius: 4px; 
-    font-size: 2em; 
-    display: flex; 
+    color: #ccc;
+    padding: 1vw 2vw;
+    margin: 1vw 0;
+    display: flex;
     justify-content: space-between;
-    align-items: center; 
-    color: #e8e6e6;
-    font-family: Calibri;
+    align-items: center;
+    width: 100%;
+    border-radius: 0.4vw;
+    cursor: pointer;
+    position: relative;
+    font-family: calibri;
+    font-weight: 600;
+    font-size: 2vw;
+}
+
+.projectButton {
+    color: #ccc;
+    padding: 1vw 2vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border-radius: 0.4vw;
+    cursor: pointer;
+    position: relative;
+    font-family: calibri;
+    font-weight: 600;
+    font-size: 2vw;
 }
 
 #projectList li:hover {
