--- a/styles.css
+++ b/styles.css
@@ -73,9 +73,8 @@ html, body {
     background-color: rgb(77, 82, 82);
     border: none; 
     color: white;
-    padding: 15px 32px; 
+    padding: 1vw 2vw; 
     text-align: center; 
-    display: inline-block; 
     font-size: 1.5vw; 
     margin: 2px; 
     cursor: pointer; 
@@ -89,16 +88,14 @@ html, body {
     background-color: #2f3437;
     border: none; 
     color: white;
-    padding: 15px 32px; 
+    padding: 1vw 2vw; 
     text-align: center; 
-    display: inline-block; 
     font-size: 1.5vw; 
     margin: 2px; 
     cursor: pointer; 
     border-radius: 8px; 
     position: relative; 
-    display: flex;
-    justify-self: end;
+    float: right;
 }
 
 .addTask:hover{
@@ -232,8 +229,6 @@ button {
     font-size: 2vw;
 }
 
-
-
 #projectList li:hover {
     background-color: rgb(166, 164, 164);
 }
@@ -268,7 +263,7 @@ button {
     width: 100%;
     padding: 0.5vw;
     margin: 1vw 0;
-    font-size: 1.5em;
+    font-size: 1em;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
@@ -295,3 +290,76 @@ button {
     background-color: #f44336;
     color: white;
 }
+
+/* Additional Styles for Task Form and List */
+#taskFormContainer {
+    display: none; 
+    padding: 1vw;
+    background-color: #4d5252;
+    border-radius: 8px;
+    margin: 2vw 0;
+}
+
+#taskFormContainer .form-group {
+    margin-bottom: 1.5vh;
+}
+
+#taskFormContainer label {
+    color: #e8e6e6;
+    font-weight: bold;
+    font-size: 1.5vw;
+}
+
+#taskFormContainer input {
+    width: 100%;
+    padding: 0.5vw;
+    border: 0.1vw solid #ccc;
+    border-radius: 4px;
+    font-size: 1.5vw;
+}
+
+#taskFormContainer button {
+    margin-top: 1vw;
+    padding: 0.5vw 1vw;
+    font-size: 1.5vw;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: white;
+}
+
+#taskFormContainer .submit-btn {
+    background-color: #4CAF50;
+}
+
+#taskFormContainer .cancel-btn {
+    background-color: #f44336;
+    margin-left: 1vw;
+}
+
+#taskList {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0;
+}
+
+#taskList li {
+    color: #ffffff;
+    padding: 1vw 2vw;
+    margin: 1vw 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    border-radius: 0.4vw;
+    cursor: pointer;
+    position: relative;
+    font-family: calibri;
+    font-weight: 600;
+    font-size: 1.5vw;
+}
+
+#taskList li:hover {
+    background-color: rgb(166, 164, 164);
+}
+
