--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,10 @@ html, body {
 
 }
 
+.cancel-task-edit {
+    background-color: red;
+}
+
 .addTask::before{
     content: "+ ";
     color: red; 
@@ -291,7 +295,42 @@ button {
     color: white;
 }
 
+
+
 /* Additional Styles for Task Form and List */
+.task-item {
+    display: flex;
+    align-items: center;
+    background-color: #4d5252;
+    color: white;
+    padding: 1vw;
+    margin: 1vw 0;
+    border-radius: 8px;
+    font-size: 1.2em;
+    justify-self: space-between;
+}
+
+.task-checkbox {
+    margin-right: 11vw;
+float: left;
+}
+
+.task-title {
+    flex-grow: 1;
+    width: 100%;
+}
+
+.edit-icon,
+.bin-icon {
+    margin-left: 1vw;
+    cursor: pointer;
+}
+
+.edit-icon:hover,
+.bin-icon:hover {
+    color: darkred;
+}
+
 #taskFormContainer {
     display: none; 
     padding: 1vw;
